root/css/style.css
/* ... */
a:hover, a:active { outline: none; }
a, a:active, a:visited { color: #607890; }
a:hover { color: #036; }

ul, ol { margin-left: 1.8em; }
ol { list-style-type: decimal; }

nav ul, nav li { margin: 0; } 
small { font-size: 85%; }
strong, th { font-weight: bold; }
td, td img { vertical-align: top; } 
sub { vertical-align: sub; font-size: smaller; }
sup { vertical-align: super; font-size: smaller; }
pre {  padding: 15px;  white-space: pre;  white-space: pre-wrap;  white-space: pre-line;  word-wrap: break-word; }
textarea { overflow: auto; } 
.ie6 legend, .ie7 legend { margin-left: -7px; } 
input[type="radio"] { vertical-align: text-bottom; }
input[type="checkbox"] { vertical-align: bottom; }
.ie7 input[type="checkbox"] { vertical-align: baseline; }
.ie6 input { vertical-align: text-bottom; }
label, input[type=button], input[type=submit], button { cursor: pointer; }
button, input, select, textarea { margin: 0; }
input:valid, textarea:valid   {  }
input:invalid, textarea:invalid { border-radius: 1px;  -moz-box-shadow: 0px 0px 5px red; -webkit-box-shadow: 0px 0px 5px red;  box-shadow: 0px 0px 5px red; }
.no-boxshadow input:invalid, 
.no-boxshadow textarea:invalid { background-color: #f0dddd; }

::-moz-selection{ background: #FF5E99; color:#fff; text-shadow: none; }
::selection { background:#FF5E99; color:#fff; text-shadow: none; } 
a:link { -webkit-tap-highlight-color: #FF5E99; } 

button {  width: auto; overflow: visible; }
.ie7 img { -ms-interpolation-mode: bicubic; }

.ir { display: block; text-indent: -999em; overflow: hidden; background-repeat: no-repeat; text-align: left; direction: ltr; }
.hidden { display: none; visibility: hidden; } 
.visuallyhidden { position: absolute !important; clip: rect(1px 1px 1px 1px);  clip: rect(1px, 1px, 1px, 1px); }
.invisible { visibility: hidden; }
.clearfix:before, .clearfix:after {  content: "\0020"; display: block; height: 0; visibility: hidden;	 } 
.clearfix:after { clear: both; }
.clearfix { zoom: 1; }


 /* Primary Styles
    Author: Kevin Jones
 */

.floatleft { float: left }

html, body {
    height: 100%;
    overflow-x: hidden;
    overflow-y: hidden;
    width: 100%;
}

body {
    font: 12px 'Lucida Grande', Arial, sans-serif;
    background: #000;
}

body, .page {
    min-width: 1161px;
    width: expression(document.body.clientWidth < 1161 ? "1161px" : "100%"); /* IE */
}

#background {
    position: absolute;
    top: 0;
    left: 0;
    z-index: -2;
}

header {
}

.white {
    width: 100%;
    height: 100%;
    background: #fff;
    z-index: -1;
    opacity: .8;
}

.socialButtons { position: relative; z-index: 101 }
footer .socialButtons { position: absolute; right: 0; top: 0 }
footer .twitter-share-button { position: absolute; top: 5px; right: 154px }
footer .google-buzz-button { position: absolute; top: 4px; right: 95px }
footer .fb_iframe_widget iframe { position: absolute; top: 5px; right: 0px }

#links {
    font-size: 10pt;
    width: 100%;
    height: 30px;
    text-align: center;
    position: absolute;
    bottom: 0;
}
#links .links {
    margin: 6px 0;
    color: #aaa;
    position: relative;
    z-index: 101;
}
#links .white {
    position: absolute;
    background-color: #000;
    z-index: 100;
}

#links .links a {
    padding: 0 6px 0 2px;
}
#links .links a:hover {
    color: #06b;
}

footer {
}

#simpleLayout,
#smallLayout {
    position: absolute;
    top: 50%;
    height: 200px;
    margin-top: -120px;
    width: 100%;
}

#simpleLayout .logo {
    position: absolute;
    right: 66%;
    top: 50px;
    margin-right: 25px;
}
#simpleLayout .error {
    font-size: 20pt;
    position: absolute;
    top: 75px;
    left: 33%;
    margin-left: 25px;
}

/* Static pages */
#staticLayout {
    height: 100%;
    margin: 0 0 30px 350px;
    padding-right: 50px;
    overflow-x: hidden;
    overflow-y: auto;
}
#staticLayout .white {
    position: absolute;
    top: 0;
    left: 0;
}
#staticLayout .logo {
    position: absolute;
    left: 10px;
    top: 17px;
}
#staticLayout .staticContent {
    background: #fff;
    padding: 4px;
    width: 600px;
    padding-left: 10px;
    opacity: .8;
}
/* done static pages */

input.hiddenButton {
    height: 0;
    width: 0;
    opacity: 0;
}

/* Wizard */

.logo {
    height: 100px;
    vertical-align: middle;
}

#wizard div.error {
    padding: 5px;
    background-color: #f9d7d7;
    border: 1px solid #cd0a0a;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}
#wizard input.error {
    background-color: #f9d7d7;
    border: 1px solid #cd0a0a;
}
#wizard label.error {
    color: #cd0a0a;
}

.huge {
    border: 1px solid #666;
    font-size: 18pt;
    padding: 8px;
    width: 240px;
    margin: 3px;
}

.title {
    font-size: 15pt;
    padding: 10px 0;
}

/* Layout */

.middle {
    font-size: 120%;
    position: absolute;
    left; 0;
    top: 50%;
    margin-top: -100px;
    /* margin-top must be -(height/2) */
    width: 100%;
}

.middle .row {
    position: relative;
}

.middle .row .left,
.middle .row .right,
.middle .row .center {
    position: absolute;
}

.middle .row .left { right: 50%; margin-right: 50px }
.middle .row .right { left: 50%; width: 40% }
.middle .row .center { left: 33%; width: 33% }

.middle .top { height: 100px }
.middle .top .left { margin-right: 140px }
.middle .top .right { right: 50%; margin-left: -115px; width: 100% }

/* done Layout */

/* Two panel steps */

/**
 * Wizard Step: Address search
 */

#wizard .message {
    font-size: 12pt;
    padding-bottom: 5px;
}

input.initial {
    font-style: italic;
    color: #555;
}

#wizard .addresses {
    padding: 5px;
    background-color: #e8fbda;
    border: 1px solid #486d2c;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}

/**
 * Wizard Step: Zone information
 */
.zonePage {
    height: 450px;
}

.zonePage .mapSection {
    position: absolute;
    left: 40px;
}

.middle .zoneName {
    font-size: 27pt;
}
/* ... */

